<resources>
    <string name="app_name">FollowFellow</string>
    <!--main-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="category1">Main</string>
    <string name="category2">List</string>
    <string name="category3">Message</string>
    <string name="category4">Likes</string>
    <string name="sw_host">Switch to Fellow Mode</string>
    <!-- guest list-->
    <string name="destination_filtering">destination filtering</string>
    <!--main navigation-->
    <string name="list_item_1">Account</string>
    <string name="list_item_2">Setting</string>
    <string name="list_item_3">Invite friends</string>
    <string name="list_item_4">Help</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <!--Tour Detail-->
    <string name="Tour_Route">Tour Route</string>
    <string name="This_Tour_Include">Includes</string>
    <string name="Host">Host</string>
    <string name="Host_Page">Host Page</string>
    <string name="Reviews">Reviews</string>
    <string name="Book_Now">Book Now</string>
    <!-- Host Profile-->
    <string name="interested">I`m Interested in...</string>
    <string name="edit_button">Edit</string>
    <string name="save_button">Save</string>
    <!--Booking-->
    <string name="Choose_date">Choose Date</string>
    <string name="Message">What do yo want to say to host</string>
    <string name="Send_Message">Send Message</string>

    <!--Host Main -->
    <string name="h_category1">Pending</string>
    <string name="h_category2">Calendar</string>
    <string name="h_category3">Message</string>
    <string name="h_category4">Register</string>
    <string name="sw_guest">Switch to Follow Mode</string>

    <!--invite friend-->
    <string name="invite_friend">Invite Friend</string>
    <string name="Share_Link">Share Link</string>
    <string name="username">username</string>

    <!--guest setting-->
    <string name="alert">Alert</string>
    <string name="feedback">Send app feedback</string>
    <string name="version">App Version</string>
    <string name="sign_out">Sign Out</string>
</resources>
