<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/cyan"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/CustomToolbar"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">
            <android.support.v4.view.ViewPager
                android:id="@+id/tour_details_viewpager"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="154.42dp"
            android:orientation="vertical"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16.11dp"
                android:text="Main Title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:layout_marginTop="5.33dp"
                android:text="sub Title"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11.33dp"
                android:src="@drawable/gm_flag"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11.33dp"
                android:textColor="@color/lightGray"
                android:text="~~~~~~"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/cyan">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14.42dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Tour_Route"
                android:textColor="@color/white"
                android:textSize="16dp"/>
            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                layout="@layout/guest_tour_route" />
            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/guest_tour_route" />
            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/guest_tour_route" />
            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/guest_tour_route"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="253.8dp">
            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="65.33dp"
                android:layout_height="65.33dp"
                android:src="@drawable/add"
                android:layout_marginTop="16.11dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/name_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="97.56dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="Gunter"/>
            <TextView
                android:id="@+id/area_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hongdae, Seoul, South Korea"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="115.23dp"/>
            <ImageView
                android:id="@+id/host_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gm_button_hostpage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="138.9dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="introduce"
                android:textSize="10.67dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="174.31dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cyan">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Reviews"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14.44dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="14.44dp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/rating_list_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gm_tap_more"
                android:layout_marginTop="14.44dp"
                android:layout_marginLeft="140dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="43.68dp"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">
                    <ImageView
                        android:id="@+id/rating_img"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/add"
                        android:scaleType="fitXY"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/gm_profileline"
                        android:layout_marginLeft="16dp"/>
                </RelativeLayout>
                <RatingBar
                    android:id="@+id/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    style="?android:attr/ratingBarStyle" />
            </LinearLayout>

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:maxLines="3"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="write"
                    android:visibility="gone" />
        </RelativeLayout>
        <include
            android:layout_width="match_parent"
            android:layout_height="300dp"
            layout="@layout/review_list"/>
        <ImageView
            android:id="@+id/book_now_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Book_Now"
            android:scaleType="fitXY"
            android:src="@drawable/gm_button_booknow"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>